--- a/main.css
+++ b/main.css
@@ -1,8 +1,34 @@
+a {
+  text-decoration: none;
+  color: white;
+}
+.boton1 {
+  margin: 10px;
+  background-color: blueviolet;
+  display: flex;
+  padding: auto;
+}
+.cabecera {
+  height: 40px;
+}
+header {
+  background-color: black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.portada {
+  background-image: url("https://tech101.io/static/hero-cover-444e42e661c85954ce67511423a5d702.png");
+  padding: 150px;
+  color: white;
+  display: flex;
+  justify-content: flex-end;
+}
 .menu ul {
-    background-color: black;
-    text-decoration: none;
-    display: block;
-    font-size: 15px;
-    margin: 0%;
-    padding: 0%;
+  background-color: black;
+  text-decoration: none;
+  display: block;
+  font-size: 15px;
+  margin: 0%;
+  padding: 0%;
 }
